Address error-prone ClassNewInstance errors
Previous behavior deprecated in Java 9.